--- a/app/views/welcome_mailer/welcome_email.text.erb
+++ b/app/views/welcome_mailer/welcome_email.text.erb
@@ -28,4 +28,4 @@ Under the Help button on the main <%= t('hyrax.product_name') %> menu, you will 
   Creator’s Rights – Information on Copyright and Intellectual Property
 
 Need Further Assistance?
-Contact the <%= t('hyrax.product_name') %> Team (https://scholar.uc.edu/contact_requests/new)
+Contact the <%= t('hyrax.product_name') %> Team (https://scholar.uc.edu/contact)
