--- a/app/views/welcome_mailer/welcome_email_student.text.erb
+++ b/app/views/welcome_mailer/welcome_email_student.text.erb
@@ -27,4 +27,4 @@ How can I use material I find in <%= t('hyrax.product_name') %>?
 Terms of Use: For more information, see the <%= t('hyrax.product_name') %> Terms of Use.
 
 Need Further Assistance?
-Contact the <%= t('hyrax.product_name') %> Team (https://scholar.uc.edu/contact_requests/new)
+Contact the <%= t('hyrax.product_name') %> Team (https://scholar.uc.edu/contact)
