--- a/app/views/static/documenting_data_help.html.erb
+++ b/app/views/static/documenting_data_help.html.erb
@@ -28,8 +28,8 @@
       Here are links to example data dictionaries from The University of Texas at Austin's Population Research Center (<a href="http://www.utexas.edu/cola/redcap/Project-Examples.php" target="_blank">data dictionary examples</a>) and IRSA (<a href="http://irsa.ipac.caltech.edu/applications/DDGEN/Doc/dd_tbl.html" target="_blank">data dictionary example</a>) provide two quick examples of data dictionaries.</li>
       <br>
 
-      <li><b>Methodology/Protocol</b> - This document details the steps taken to collect the data. If you submitted modified data instead of a raw data set, you can explain those steps in this document.</li>
-    </ol>
+      Here is a link from IRSA for a (<a href="http://irsa.ipac.caltech.edu/applications/DDGEN/Doc/dd_tbl.html" target="_blank">data dictionary example</a>) to provide a quick example of data dictionaries.</li>
+      <br>
 
     <h3>Additional Resources on Documentation for Data:</h3>
 
