--- a/app/views/static/format_advice.html.erb
+++ b/app/views/static/format_advice.html.erb
@@ -87,9 +87,9 @@
 
     <h3>Accessibility</h3>
     <p>
-      How you create your access files can have a great impact on those with disabilities. <%=t('hyrax.product_name') %> encourages submitters to create accessible content for all. Some resources for creating accessible content can be found on the <a href="http://www.uc.edu/aess/disability/faculty_resources.html" target= "_blank" alt="UC Faculty Resources on creating accessible content">Disability Services’ Faculty Resources</a> page. Additional resources are available from the <a href="http://ncdae.org/resources/cheatsheets/" target= "_blank" alt="Cheatsheets for creating accessible content.">National Center on Disability and Access to Education</a>.
+      How you create your access files can have a great impact on those with disabilities. <%=t('hyrax.product_name') %> encourages submitters to create accessible content for all. Some resources for creating accessible content can be found on the <a href="https://www.uc.edu/about/ucit/about/accessibility/tutorials.html" target= "_blank" alt="UC Resources on creating accessible content">UC's How to Make Accessible Content</a> page. Additional resources are available from the <a href="http://ncdae.org/resources/cheatsheets/" target= "_blank" alt="Cheatsheets for creating accessible content.">National Center on Disability and Access to Education</a>.
     </p>
-
+    
     <h3>
       Preservation Files
     </h3>
