Update welcome email

--- a/app/views/welcome_mailer/welcome_email.text.erb
+++ b/app/views/welcome_mailer/welcome_email.text.erb
@@ -16,7 +16,7 @@ What types of content should I submit to <%= t('hyrax.product_name') %>?
 How do I get started?
 ---------------------
 
-After you have edited your profile page for the first time, you may share content by clicking on [Add New] from the menu.
+After you have edited your profile page for the first time, you may share content by clicking on [Works] then [New Work] from the menu.
 
 Where do I go for more information?
 -----------------------------------
