--- a/app/views/hyrax/users/_user_info.html.erb
+++ b/app/views/hyrax/users/_user_info.html.erb
@@ -81,6 +81,11 @@
     <dd><%= user.uc_affiliation %></dd>
   <% end %>
 
+   <% if user.rd_page.present? %>
+    <dt><i class="glyphicon glyphicon-globe" aria-hidden="true"></i> Research Directory Page</dt>
+    <dd><%= iconify_auto_link(user.rd_page) %></dd>
+  <% end %>
+
   <% if user.telephone.present? %>
     <dt><i class="glyphicon glyphicon-earphone" aria-hidden="true"></i> Telephone</dt>
     <dd><%= link_to_telephone(user) %></dd>
