--- a/app/views/hyrax/dashboard/profiles/_edit_primary.html.erb
+++ b/app/views/hyrax/dashboard/profiles/_edit_primary.html.erb
@@ -154,5 +154,8 @@
           <% end %>
     <% end %>
     <%= render partial: 'orcid/profile_connections/orcid_connector', locals: {default_search_text: current_user.name } %>
+		<p>
+		   <%= link_to 'What is ORCID?', main_app.orcid_about_path %>
+ 	  </p>
   </div>
 </div>
