Fix broken links on the home page.

--- a/app/views/layouts/scholar/_links.html.erb
+++ b/app/views/layouts/scholar/_links.html.erb
@@ -1,5 +1,5 @@
 <div class="ext-links text-center hidden-xs">
   <a href="http://libapps.libraries.uc.edu/scholarblog/"><%= t('hyrax.homepage.links.scholar_blog') %></a> |
-  <a href="http://libraries.uc.edu/digital-scholarship/data-services"><%= t('hyrax.homepage.links.manage_your_data') %></a> |
-  <a href="http://www.libraries.uc.edu/digital-scholarship.html"><%= t('hyrax.homepage.links.digital_scholarship') %></a>
+  <a href="http://guides.libraries.uc.edu/datamanagementplanning"><%= t('hyrax.homepage.links.manage_your_data') %></a> |
+  <a href="http://dsc.uc.edu"><%= t('hyrax.homepage.links.digital_scholarship') %></a>
 </div>
