--- a/app/views/hyrax/base/_relationships.html.erb
+++ b/app/views/hyrax/base/_relationships.html.erb
@@ -1,4 +1,4 @@
 <dl class="work-show">
 <h2>Relationships</h2>
-<%= render 'relationships_parent_rows', type: @type, items: @items, presenter: @presenter %>
+<%= render 'relationships_parent_rows', presenter: presenter %>
 </dl>
