--- a/app/views/hyrax/base/_parent_relationship_table.html.erb
+++ b/app/views/hyrax/base/_parent_relationship_table.html.erb
@@ -1,15 +1,13 @@
 <% parent_solr_docs = ParentQueryService.query_parents_for_id(child_id) %>
 
-<% if !(parent_solr_docs.blank?) %>
-<h2><%= "Relationships" %></h2>
-<dt> <%= t('hyrax.relationships_parent_row.label') %> </dt>
+<dt> <%= t('hyrax.relationships_parent_row.label') unless parent_solr_docs.blank? %> </dt>
   <dd>
     <ul class="tabular">
-      <% parent_solr_docs.each do |item| %>
+      <% parent_solr_docs.each do |item| unless parent_solr_docs.blank? %>
         <li class='attribute attribute-title'>
           <%= link_to item["title_tesim"].first, url_for_document(SolrDocument.find(item["id"])) %>
         </li>
       <% end %>
-  </ul>
-</dd>
-<% end %>
+     <% end %> 
+    </ul>
+  </dd>
