--- a/app/views/hyrax/collections/show.html.erb
+++ b/app/views/hyrax/collections/show.html.erb
@@ -56,17 +56,6 @@
     <div class="col-md-8 hyc-description">
       <%= render 'collection_description', presenter: @presenter %>
 
-      <% if @presenter.collection_type_is_nestable? && @presenter.total_parent_collections > 0 %>
-          <div class="hyc-blacklight hyc-bl-title">
-            <h2>
-              <%= t('.parent_collection_header') %> (<%= @presenter.total_parent_collections %>)
-            </h2>
-          </div>
-          <div class="hyc-blacklight hyc-bl-results">
-            <%= render 'show_parent_collections', presenter: @presenter %>
-          </div>
-      <% end %>
-
     </div>
     <div class="col-md-4 hyc-metadata">
       <% unless has_collection_search_parameters? %>
@@ -93,6 +82,18 @@
       <%= render 'search_form', presenter: @presenter, url: hyrax.collection_path(@presenter.id) %>
     </div>
   </div>
+
+  <!-- Parent Collections -->
+  <% if @presenter.collection_type_is_nestable? && @presenter.total_parent_collections > 0 %>
+      <div class="hyc-blacklight hyc-bl-title">
+        <h2>
+          <%= t('.parent_collection_header') %> (<%= @presenter.total_parent_collections %>)
+        </h2>
+      </div>
+      <div class="hyc-blacklight hyc-bl-results">
+        <%= render 'show_parent_collections', presenter: @presenter %>
+      </div>
+  <% end %>
 
   <!-- Subcollections -->
   <% if @presenter.collection_type_is_nestable? && @subcollection_count > 0 %>
