Hide Relationship if empty

--- a/app/views/hyrax/base/_parent_relationship_table.html.erb
+++ b/app/views/hyrax/base/_parent_relationship_table.html.erb
@@ -1,5 +1,5 @@
 <% parent_solr_docs = ParentQueryService.query_parents_for_id(child_id) %>
-
+<h2><%= t('hyrax.base.relationships.label') unless parent_solr_docs.blank? %></h2>
 <dt> <%= t('hyrax.relationships_parent_row.label') unless parent_solr_docs.blank? %> </dt>
   <dd>
     <ul class="tabular">
@@ -8,6 +8,6 @@
           <%= link_to item["title_tesim"].first, url_for_document(SolrDocument.find(item["id"])) %>
         </li>
       <% end %>
-     <% end %> 
-    </ul>
-  </dd>
+    <% end %> 
+  </ul>
+</dd>
