--- a/app/views/hyrax/base/_relationships_parent_rows.html.erb
+++ b/app/views/hyrax/base/_relationships_parent_rows.html.erb
@@ -6,8 +6,10 @@
 <%# [scholar-override] Show parent relationships for child %>
 <%= render 'parent_relationship_table', child_id: presenter.solr_document.id %>
 
-
 <%# Render grouped presenters. Show rows if there are any items of that type %>
+<% if !(presenter.member_of_collection_presenters.empty?) %>
+	<h2><%= t('hyrax.base.relationships.label') %></h2>
+<% end %>
 <% presenter.presenter_types.each do |type| %>
   <% presenter.grouped_presenters(filtered_by: type).each_pair do |_, items| %>
     <%= render 'relationships_parent_row', type: type, items: items, presenter: presenter %>
