--- a/app/views/_masthead.html.erb
+++ b/app/views/_masthead.html.erb
@@ -11,7 +11,7 @@
         </button>
         <%= render '/logo' %>
         <% unless controller_name == 'homepage' %>
-          <%= link_to root_path, class: 'navbar-brand' do %> 
+          <%= link_to main_app.root_path, class: 'navbar-brand' do %> 
             <b> | <%= image_tag 'scholar-logo.png', id: 'scholar-nav-logo', alt: 'scholar@uc' %> </b>
           <% end %>
         <% end %>
