Hide Relationships if empty [Updated]

--- a/app/views/hyrax/base/_relationships.html.erb
+++ b/app/views/hyrax/base/_relationships.html.erb
@@ -1,3 +1,3 @@
 <dl class="work-show">
-<%= render 'relationships_parent_rows', presenter: presenter %>
+<%= render 'relationships_parent_rows', presenter: presenter, child_id: presenter.solr_document.id %>
 </dl>
