--- a/app/views/catalog/_index_list_default.html.erb
+++ b/app/views/catalog/_index_list_default.html.erb
@@ -2,10 +2,10 @@
   <div class="metadata">
     <dl class="dl-horizontal">
     <% doc_presenter = index_presenter(document) %>
-    <% index_fields(document).each do |field_name, field| -%>
+    <% index_fields(document).each do |field_name, field| %>
       <% if should_render_index_field? document, field %>
-          <dt class="field-label <%= field_name %>"><%= render_index_field_label document, field: field_name %></dt>
-          <dd class="field-text <%= field_name %>"><%= doc_presenter.field_value field %></dd>
+        <dt class="field-label <%= field_name %>"><%= render_index_field_label document, field: field_name %></dt>
+        <dd class="field-text <%= field_name %>"><%= catalog(doc_presenter.field_value field) %></dd>
       <% end %>
     <% end %>
     </dl>
