--- a/app/views/layouts/_head_tag_content.html.erb
+++ b/app/views/layouts/_head_tag_content.html.erb
@@ -7,8 +7,8 @@ signed in %>
     <%= tag :meta, name: 'current-user', data: { user_key: current_user.user_key } %>
 <% end %>
 <!-- added for use on small devices like phones -->
-<meta name="viewport" content="width=device-width, initial-scale=1>
-<link rel="resourcesync" href="<%= hyrax.capability_list_url %>"/>
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<link rel="resourcesync" href="<%= hyrax.capability_list_url %>" />
 
 <!-- Mendelay card metadata-->
 <%= yield :mendeley_meta %>
