un-hide share tab

--- a/app/views/hyrax/base/_guts4form.html.erb
+++ b/app/views/hyrax/base/_guts4form.html.erb
@@ -32,7 +32,7 @@
             </li>
         <% end %>
 
-        <li role="presentation" id="tab-share" class="hidden">
+        <li role="presentation" id="tab-share">
           <a href="#share" aria-controls="share" role="tab" data-toggle="tab">
             <%= t("hyrax.works.form.tab.share") %>
           </a>
