Google Analytics version 4 snippet.

--- a/app/views/layouts/_head_tag_content.html.erb
+++ b/app/views/layouts/_head_tag_content.html.erb
@@ -7,10 +7,9 @@ signed in %>
     <%= tag :meta, name: 'current-user', data: { user_key: current_user.user_key } %>
 <% end %>
 <!-- added for use on small devices like phones -->
-<meta name="viewport" content="width=device-width, initial-scale=1" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<link rel="resourcesync" href="<%= hyrax.capability_list_url %>" />
 
-<!-- Mendelay card metadata-->
-<%= yield :mendeley_meta %>
 <!-- Twitter card metadata -->
 <%= yield :twitter_meta %>
 <!-- Google Scholar metadata -->
@@ -23,12 +22,19 @@ signed in %>
 
 <!-- application js -->
 <%= javascript_include_tag 'application' %>
-<%= tinymce_assets if can? :update, ContentBlock %>
+
 <%= render 'shared/appearance_styles' %>
 
-<!-- Google Analytics -->
-<%= render partial: '/ga', formats: [:html] %>
+<% if Hyrax.config.analytics? %>
+  <% case Hyrax.config.analytics_provider %>
+  <% when 'ga4' %>
+    <%= render partial: 'shared/ga4', formats: [:html] %>
+  <% when 'google' %>
+    <%= render partial: 'shared/ga', formats: [:html]  %>
+  <% when 'matomo' %>
+    <%= render partial: 'shared/matomo', formats: [:html] %>
+  <% end %>
+<% end %>
 
 <!-- for extras, e.g., a favicon -->
 <%= render partial: '/head_tag_extras', formats: [:html] %>
-
