Restore ORCID attribute on hyrax user object

--- a/app/views/hyrax/dashboard/profiles/_edit_primary.html.erb
+++ b/app/views/hyrax/dashboard/profiles/_edit_primary.html.erb
@@ -108,6 +108,13 @@
   </div>
 
   <div class="form-group">
+    <%= f.label :orcid, 'Orcid'.html_safe, class: 'col-xs-4 control-label' %>
+    <div class="col-xs-8">
+       <%= f.text_field :orcid, class: "form-control" %>
+    </div>
+  </div>
+
+  <div class="form-group">
     <%= f.label :website, class: 'col-xs-4 control-label' do %>
       <%= t('hyrax.user_profile.website') %>
     <% end %>
@@ -143,28 +150,16 @@
     </div>
   </div><!-- .form-group -->
 
-  <div class="form-group">
+
+<div class="form-group">
     <%= f.label :googleplus_handle, '<i class="fa fa-google-plus"></i> Google+ Handle'.html_safe, class: 'col-xs-4 control-label' %>
     <div class="col-xs-8">
        <%= f.text_field :googleplus_handle, class: "form-control" %>
     </div>
   </div><!-- .form-group -->
 
+
   <%= render 'trophy_edit', trophies: @trophies %>
 
   <%= f.button '<i class="glyphicon glyphicon-save"></i> Save Profile'.html_safe, type: 'submit', class: "btn btn-primary" %>
 <% end %>
-
-<div class="orcid-section">
-  <div class="well">
-    <% defined?(status_processor) || status_processor = Orcid::ProfileStatus.method(:for) %>
-      <% status_processor.call(current_user) do |on| %>
-          <% on.authenticated_connection do |profile| %>
-          <% end %>
-    <% end %>
-    <%= render partial: 'orcid/profile_connections/orcid_connector', locals: {default_search_text: current_user.name } %>
-		<p>
-		   <%= link_to 'What is ORCID?', main_app.orcid_about_path %>
- 	  </p>
-  </div>
-</div>
