reverted change to views/devise/registrations/new

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -27,5 +27,5 @@
     </div>
   <% end %>
 <% else %>
-  <p>To request an account, <%= link_to 'use the contact page', contact_path %>.</p>
+  <p>To request an account, <%= link_to 'use the contact page', contact_path %></a>.</p>
 <% end %>
