--- a/app/views/records/edit_fields/_time_period.html.erb
+++ b/app/views/records/edit_fields/_time_period.html.erb
@@ -1,1 +1,1 @@
-<%= f.input key, as: :multi_value, input_html: { class: 'form-control', autocomplete: 'on' }, required: f.object.required?(key) %>
+<%= f.input key, input_html: { class: 'form-control', autocomplete: 'on', multiple: true  }, required: f.object.required?(key) %>
