Updates multi-value views.

--- a/app/views/records/edit_fields/_subject.html.erb
+++ b/app/views/records/edit_fields/_subject.html.erb
@@ -1,1 +1,11 @@
-<%= f.input key, as: :multi_value, input_html: { class: 'form-control', autocomplete: 'on' }, required: f.object.required?(key) %>
+<%# f.input key, input_html: { class: 'form-control', autocomplete: 'on', multiple: true }, required: f.object.required?(key) %> 
+
+
+<%= f.input key,
+            as: :multi_value,
+            input_html: {
+              class: 'form-control',
+              data: { 'autocomplete-url' => "/authorities/search/local/subjects",
+                      'autocomplete' => key }
+            },
+            required: f.object.required?(key) %>
